[package]
name = "ayumi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Ayumi (歩み) — git signs, blame, staging, and diff integration for Neovim"
homepage = "https://github.com/pleme-io/ayumi"
repository = "https://github.com/pleme-io/ayumi"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "git", "signs", "blame"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
kakitori = { path = "../kakitori", version = "0.1.0" }
